feat: implement Resend email automation
Email Automation Features:
- Reminder email sent 10 min after lead creation if no booking
- Welcome/confirmation email sent immediately when booking is created
- Beautiful HTML email templates with B2Bee branding
- Pre-filled Cal.com links in reminder emails

Database Changes:
- Add reminderSentAt field to Lead model
- Add index for efficient querying

Email Templates:
- Reminder email with booking link and feature highlights
- Confirmation email with booking details and what to expect

Cron Job:
- Runs every 5 minutes via Vercel Cron
- Finds leads created >10 mins ago without bookings
- Sends reminder email and marks as sent
- Processes max 50 leads per run to avoid timeouts

Configuration:
- RESEND_API_KEY: re_2zFuPFLK_NWr7gHTvRwZTf1AAxggs2T59
- RESEND_FROM_EMAIL: noreply@notifications.b2bee.ai
- CRON_SECRET: for securing cron endpoint

Integration Points:
- Cal.com webhook sends confirmation on booking
- Lead API creates lead (10 min timer starts)
- Cron job checks and sends reminders
- All emails include booking info and branding

--- a/env.example
+++ b/env.example
@@ -5,10 +5,14 @@ DATABASE_URL="postgresql://user:password@host:port/database"
 AUTH_SECRET="your-random-secret-here"
 NEXT_PUBLIC_APP_URL="https://your-app.vercel.app"
 
-# Optional: Email notifications (Resend)
-RESEND_API_KEY="re_123456789"
+# Email Automation (Resend)
+RESEND_API_KEY="re_2zFuPFLK_NWr7gHTvRwZTf1AAxggs2T59"
+RESEND_FROM_EMAIL="noreply@notifications.b2bee.ai"
 
-# Optional: Cal.com integration
+# Cal.com Integration
 NEXT_PUBLIC_CALCOM_LINK="https://cal.com/your-username/30min"
 CALCOM_WEBHOOK_SECRET="your-calcom-webhook-secret"
+
+# Cron Job Security (generate a random secret)
+CRON_SECRET="your-random-cron-secret"
 
