feat: add configurable reminder delay and manual test endpoint
Testing Features:
- REMINDER_DELAY_MINUTES env var (default 1 min for testing)
- /api/test-reminder endpoint for manual testing
- Detailed logging of delay time and lead criteria
- Can set to 10 minutes for production later

Testing:
- POST /api/test-reminder with { email: 'user@example.com' }
- Sends reminder immediately regardless of delay
- Shows lead status and reminder history

--- a/env.example
+++ b/env.example
@@ -16,3 +16,6 @@ CALCOM_WEBHOOK_SECRET="your-calcom-webhook-secret"
 # Cron Job Security (generate a random secret)
 CRON_SECRET="your-random-cron-secret"
 
+# Email Reminder Delay (in minutes - use 1 for testing, 10 for production)
+REMINDER_DELAY_MINUTES="1"
+
